--- a/heavycenter/src/main/res/layout/frag_main_weight_set.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weight_set.xml
@@ -122,7 +122,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-        <TextView
+        <EditText
+            android:inputType="numberDecimal"
                 android:id="@+id/tv_newvalue"
                 android:textColor="@color/color_hv_yelll"
                 android:textSize="30sp"
