--- a/heavycenter/src/main/res/layout/frag_main_weigt.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigt.xml
@@ -26,8 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
                 <com.siweisoft.heavycenter.module.view.weight.WeightView
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_centerInParent="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
@@ -65,6 +65,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_mz"
                         android:gravity="center"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
@@ -91,6 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_pz"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
@@ -116,6 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_kc"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
@@ -141,6 +144,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_jz"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
