--- a/heavycenter/src/main/res/layout/frag_main_weigts.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts.xml
@@ -155,6 +155,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <TextView
+                                android:id="@+id/tv_type"
                                 android:background="@drawable/bg_hv_sharp2_yell_solid"
                                 android:textColor="@color/white"
                                 android:textSize="15sp"
@@ -163,7 +164,7 @@
                                 android:layout_height="wrap_content" />
 
                             <TextView
-                                android:id="@+id/tv_shdw"
+                                android:id="@+id/tv_comp"
                                 android:layout_marginLeft="20dp"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/hv_dimen_text_aaa"
@@ -198,7 +199,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="预估发货净重"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -206,7 +207,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="收货净重"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -220,7 +221,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="10t"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -228,7 +229,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="13t"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -245,16 +246,16 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
-                            android:text="预估发货净重"
+                            android:textSize="@dimen/hv_dimen_text"
+                            android:text="预估发货毛重"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
-                            android:text="收货净重"
+                            android:textSize="@dimen/hv_dimen_text"
+                            android:text="收货毛重"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -266,7 +267,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="10t"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -274,7 +275,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="10t"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -289,7 +290,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="01/15 10:10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -297,7 +298,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/color_grey_400"
-                            android:textSize="@dimen/hv_dimen_text_a"
+                            android:textSize="@dimen/hv_dimen_text"
                             android:text="01/15 10:10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
