--- a/heavycenter/src/main/res/layout/item_main_msg_all.xml
+++ b/heavycenter/src/main/res/layout/item_main_msg_all.xml
@@ -7,8 +7,11 @@
             type="com.siweisoft.heavycenter.data.netd.msg.list.MsgsResBean.ResultsBean" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,7 +21,7 @@
             android:paddingRight="10dp"
             android:paddingLeft="10dp"
             android:paddingBottom="10dp"
-            android:background="@drawable/bg_hv_press_sharp2_blue_while"
+
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -178,5 +181,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
