--- a/heavycenter/src/main/res/layout/item_main_weight_detail.xml
+++ b/heavycenter/src/main/res/layout/item_main_weight_detail.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 <TextView
+    android:id="@+id/tv_time"
     android:text="10：15"
     android:textColor="@color/color_hv_yelll"
     android:textSize="@dimen/hv_dimen_text_title"
@@ -48,8 +49,8 @@
     android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_txt"
                 android:layout_marginTop="5dp"
-                android:text="@{item_main_weight_detail}"
                 android:textColor="@color/hv_color_text_title"
                 android:textSize="@dimen/hv_dimen_text_title"
                 android:layout_width="match_parent"
