--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -10,7 +10,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:background="@color/white"
         >
 
@@ -33,12 +33,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="15dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="15dp">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:src="@drawable/icon_hv_mana_store"
