--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -60,7 +60,7 @@
 
                         android:singleLine="true"
                         android:textColor="@color/hv_color_text_title"
-                        android:textSize="@dimen/hv_dimen_text_title_aaaa"
+                        android:textSize="@dimen/dimen_recylce_item_title_txtsize"
                         android:text="@{item_mana_car_my.carLicenseNo}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -69,7 +69,7 @@
                         android:singleLine="true"
                         android:layout_marginLeft="14dp"
                         android:textColor="@color/hv_color_text_title"
-                        android:textSize="@dimen/hv_dimen_text_title_aaaa"
+                        android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
                         android:text='@{item_mana_car_my.emptyWeight+""}'
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -80,8 +80,8 @@
                     <TextView
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textColor="@color/color_recylce_item_date_txtcolor"
+                        android:textSize="@dimen/dimen_recylce_item_date_txtsize"
                         android:text="@{item_mana_car_my.carBrand}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -96,7 +96,7 @@
                     <TextView
                         android:singleLine="true"
                         android:textColor="@color/color_grey_500"
-                        android:textSize="@dimen/hv_dimen_text_title_aaaa"
+                        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
                         android:text="@{item_mana_car_my.trueName}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -104,7 +104,7 @@
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/color_grey_500"
-                        android:textSize="@dimen/hv_dimen_text_title_aaaa"
+                        android:textSize="@dimen/dimen_recylce_item_content_txtsize"
                         android:text="@{item_mana_car_my.tel}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
