--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent">
 
 
-                <android.support.v4.view.ViewPager
+                <com.android.lib.view.viewpager.ScrollbleViewPager
                     android:orientation="vertical"
                     android:id="@+id/ll_cntent"
                     android:layout_centerInParent="true"
