--- a/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
@@ -37,6 +37,7 @@
 
 
             <TextView
+                android:id="@+id/tv_orderandtransno"
                 android:singleLine="true"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/tv_goodnameanspes"
                 android:singleLine="true"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"
@@ -77,6 +79,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/tv_from"
                     android:layout_marginLeft="10dp"
                     android:singleLine="true"
                     android:layout_gravity="center"
@@ -100,6 +103,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/tv_to"
                     android:layout_marginLeft="10dp"
                     android:singleLine="true"
                     android:layout_gravity="center"
