--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -10,7 +10,7 @@
     <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:id="@+id/swipe"
+                   android:id="@+id/ll_neworder"
                    android:background="@drawable/bg_hv_sel_dark_light"
                    android:padding="@dimen/dimen_recylce_item_margin">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -102,7 +102,6 @@
                     android:layout_height="1dp"/>
             <TextView
                     android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
                     android:id="@+id/tv_plantime"
                     android:layout_gravity="right|center_vertical"
                     android:gravity="bottom|right"
@@ -112,6 +111,75 @@
                     android:textSize="@dimen/dimen_recylce_item_date_txtsize"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/dimen_frag_padding"
+            android:visibility="visible"
+            android:id="@+id/ll_menu"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="1dp"/>
+        <com.siweisoft.heavycenter.module.view.text.BgTextView
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:id="@+id/bt_sure"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:singleLine="true"
+            android:layout_marginLeft="10dp"
+            android:textSize="15sp"
+            android:visibility="visible"
+            style_common:color_one="@color/color_hv_yelll"
+            style_common:stroke="0dp"
+            style_common:color_stroke="@color/red"
+            style_common:corner="5dp"
+            style_common:color_txt="@color/white"
+
+            style_common:color_two="@color/color_red_800"
+            style_common:stroke_two="2dp"
+            style_common:color_stroke_two="@color/color_hv_yelll"
+            style_common:corner_two="5dp"
+            style_common:color_txt_two="@color/white"
+            style_common:boo_one="false"
+            android:text="接受"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+            <com.siweisoft.heavycenter.module.view.text.BgTextView
+                android:layout_gravity="right"
+                android:id="@+id/bt_reject"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:singleLine="true"
+                android:layout_marginLeft="5dp"
+                android:textSize="15sp"
+                android:visibility="visible"
+                style_common:color_one="@color/color_hv_yelll"
+                style_common:stroke="0dp"
+                style_common:color_stroke="@color/red"
+                style_common:corner="5dp"
+                style_common:color_txt="@color/white"
+
+                style_common:color_two="@color/color_red_800"
+                style_common:stroke_two="2dp"
+                style_common:color_stroke_two="@color/color_hv_yelll"
+                style_common:corner_two="5dp"
+                style_common:color_txt_two="@color/white"
+                style_common:boo_one="false"
+                android:text="拒绝"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
     </LinearLayout>
     </LinearLayout>
