--- a/heavycenter/src/main/res/layout/item_main_trans.xml
+++ b/heavycenter/src/main/res/layout/item_main_trans.xml
@@ -121,6 +121,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:maxEms="4"
                         android:id="@+id/tv_dirvername"
                         android:singleLine="true"
                         android:textColor="@color/white"
@@ -154,7 +155,7 @@
 
 
                     <TextView
-                        android:id="@+id/tv_plannum"
+                        android:id="@+id/tv_nownum"
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/white"
@@ -163,18 +164,14 @@
                         android:layout_height="wrap_content" />
 
 
-                    <View
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"/>
                     <TextView
+                        android:gravity="right|center_vertical"
                         android:id="@+id/tv_startime"
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/color_hv_txt_dark"
                         android:textSize="@dimen/dimen_recylce_item_date_txtsize"
-                        android:text="12/09 10:10"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
@@ -195,7 +192,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
-                        android:id="@+id/tv_nownum"
+                        android:id="@+id/tv_plannum"
                         android:singleLine="true"
                         android:layout_marginLeft="15dp"
                         android:textColor="@color/color_hv_yelll"
@@ -203,26 +200,25 @@
                         android:text="0t"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
-
                     <View
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="1dp"/>
 
                     <TextView
+                        android:gravity="right|center_vertical"
                         android:id="@+id/tv_endtime"
                         android:singleLine="true"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/color_hv_txt_dark"
                         android:textSize="@dimen/dimen_recylce_item_date_txtsize"
-                        android:text="12/09 10:10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
                     <com.siweisoft.heavycenter.module.view.text.BgTextView
                         android:id="@+id/bt_sure"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
                         android:singleLine="true"
@@ -241,10 +237,10 @@
                         style_common:corner_two="5dp"
                         style_common:color_txt_two="@color/white"
                         style_common:boo_one="false"
-                        android:text="接受"
+                        android:text="完成"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
-                </LinearLayout>
+                    </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
