--- a/lib/src/main/res/anim/anim_push_right_in.xml
+++ b/lib/src/main/res/anim/anim_push_right_in.xml
@@ -5,8 +5,7 @@
     <translate
         android:fromXDelta="100%p"
         android:toXDelta="0%p"
-        android:duration="@integer/integer_time_short"
-        android:interpolator="@android:interpolator/accelerate_decelerate" />
+        android:duration="@integer/integer_time_short" />
 
 
 </set>
