--- a/heavycenter/src/main/res/layout/frag_main_msgs_msg.xml
+++ b/heavycenter/src/main/res/layout/frag_main_msgs_msg.xml
@@ -2,7 +2,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="frag_main_msg_sys"
+            name="frag_main_msgs_msg"
             type="String" />
     </data>
 
