--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -47,7 +47,7 @@
                 android:layout_height="match_parent">
 
 
-                <com.android.lib.view.viewpager.ScrollbleViewPager
+                <android.support.v4.view.ViewPager
                     android:orientation="vertical"
                     android:id="@+id/ll_cntent"
                     android:layout_centerInParent="true"
@@ -57,7 +57,7 @@
 
             <com.siweisoft.heavycenter.module.view.menu.ScrollMenu
                 android:id="@+id/scrollmenu"
-                android:layout_marginTop="-4dp"
+                android:layout_marginTop="-2dp"
                 android:layout_below="@id/topview"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"/>
